<resources>
    <string name="app_name">ZIRCONIA</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign up</string>
    <string name="error_password">Password must contain at least 4 characters.</string>
    <string name="error_confirm_password">Confirm password does not match password.</string>
    <string name="error_email">Must be a valid email.</string>
    <string name="error_first_name">Invalid First Name.</string>
    <string name="error_last_name">Invalid Last Name.</string>
    <string name="error_phone">Invalid Phone number.</string>
    <string name="error_date_of_birth">Date of birth is required.</string>
    <string name="error_gender">Gender is required.</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="featured_label">Featured</string>
    <string name="apartment_label">Apartment</string>
    <string name="accessories_label">Accessories</string>
    <string name="shoes_label">Shoes</string>
    <string name="tops_label">Tops</string>
    <string name="bottoms_label">Bottoms</string>
    <string name="dresses_label">Dresses</string>
    <string name="account_label">My Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>


    <string name="city_prompt">Choose a City</string>
    <string name="phone">Phone</string>
    <string name="password_special_char">((?=.*[a-z])(?=.*\\d)(?=.*[A-Z])(?=.*[@#$%!]).{4,20})</string>
    <string name="name_special_char">^[A-Za-z]+$</string>
    <string name="phone_special_char">(0)?[5][0-9]{8}</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address_below_to_reset_password">Enter your email address below\n to reset password</string>


    <string-array name="city_arrays">
        <item>Jerusalem</item>
        <item>Ramallah</item>
        <item>Jerico</item>
        <item>Nablus</item>
        <item>Hebron</item>
        <item>Bethlahem</item>
    </string-array>

    <string name="facebook_app_id">587730808399022</string>
    <string name="fb_login_protocol_scheme">fb587730808399022</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="internet_error">No Internet Connection\n Please try Again</string>
    <string name="facebook_user_cancel">User Canceled</string>
    <string name="cart">CART</string>
    <string name="items">ITEMS</string>
    <string name="money">Money</string>
    <string name="total">Total</string>
    <string name="checkout">PROCEED TO CHECKOUT</string>
    <string name="settings">settings</string>

</resources>
